--- a/ui/index.html
+++ b/ui/index.html
@@ -115,7 +115,7 @@
                     <div class="glass p-5 rounded-2xl border-l-4 border-blue-500">
                         <div class="text-[10px] uppercase text-slate-500 font-extrabold mb-1 tracking-widest">Monthly Flow</div>
                         <div class="text-2xl font-bold text-blue-400" id="metric-budget">$0.00</div>
-                        <div class="text-xs text-slate-400">Total fixed commitment</div>
+                        <div class="text-[10px] text-slate-400" id="metric-flow-split">Split: --</div>
                     </div>
                 </div>
 
@@ -234,8 +234,8 @@
         }
 
         function downloadTemplate() {
-            const headers = "Name, Balance, Interest Rate (%), Min Payment, Due Day (Optional)\n";
-            const example = "Credit Card A, 5000, 18.99, 150, 15\nPersonal Loan, 12000, 8.5, 350, 1\nCar Loan, 8000, 5.0, 250, 28";
+            const headers = "Name, Balance, Interest Rate (Decimal), Min Payment, Due Day (Optional)\n";
+            const example = "Credit Card A, 5000, 0.1899, 150, 15\nPersonal Loan, 12000, 0.085, 350, 1\nCar Loan, 8000, 0.05, 250, 28";
             const blob = new Blob([headers + example], { type: 'text/csv' });
             const url = window.URL.createObjectURL(blob);
             const a = document.createElement('a');
@@ -266,13 +266,18 @@
                 return {
                     name: parts[0],
                     balance: parseFloat(parts[1]),
-                    interestRate: parseFloat(parts[2]),
+                    interestRate: parseFloat(parts[2]) * 100, // Convert decimal to percentage
                     minPayment: parseFloat(parts[3]),
                     dueDay: parseInt(parts[4]) || 1
                 };
             }).filter(d => !isNaN(d.balance));
 
             if (debts.length === 0) return;
+
+            // Calculate Flow Split (1-14, 15-End)
+            const firstHalfMins = debts.filter(d => d.dueDay <= 14).reduce((sum, d) => sum + d.minPayment, 0);
+            const secondHalfMins = debts.filter(d => d.dueDay > 14).reduce((sum, d) => sum + d.minPayment, 0);
+            const monthlyBudget = extraPayment + firstHalfMins + secondHalfMins;
 
             // 2. Sort for Priority
             const prioritizedDebts = [...debts];
@@ -353,6 +358,9 @@
             document.getElementById('metric-interest').innerText = `$${totalInterest.toLocaleString(undefined, {minimumFractionDigits: 2})}`;
             document.getElementById('metric-total').innerText = `$${(initialPrincipal + totalInterest).toLocaleString(undefined, {minimumFractionDigits: 2})}`;
             document.getElementById('metric-budget').innerText = `$${monthlyBudget.toLocaleString()}`;
+            
+            // Show Flow Split: Extra + 1st Half Mins | 2nd Half Mins
+            document.getElementById('metric-flow-split').innerText = `1-14th: $${(extraPayment + firstHalfMins).toLocaleString()} | 15th+: $${secondHalfMins.toLocaleString()}`;
 
             renderMilestones(milestones, prioritizedDebts);
             renderTimelineTransposed(timeline, prioritizedDebts.map(d => d.name));
