--- a/ui/index.html
+++ b/ui/index.html
@@ -438,90 +438,104 @@
             if (!lastResult) return alert("Run simulation first.");
 
             const html = `
-                <div style="font-family: Arial, sans-serif; color: #334155; padding: 40px; background: white;">
-                    <div style="display: flex; justify-content: space-between; border-bottom: 2px solid #10b981; padding-bottom: 20px; margin-bottom: 30px;">
+                <div style="font-family: Arial, sans-serif; color: #334155; padding: 20px; background: white; width: 1000px;">
+                    <!-- Header -->
+                    <div style="display: flex; justify-content: space-between; border-bottom: 2px solid #10b981; padding-bottom: 10px; margin-bottom: 20px;">
                         <div>
-                            <h1 style="font-size: 28pt; margin: 0; color: #0f172a; font-weight: 900;">DebtPipe</h1>
-                            <p style="color: #10b981; font-weight: bold; margin: 5px 0 0 0; text-transform: uppercase; font-size: 10pt;">by Gitchegumi</p>
+                            <h1 style="font-size: 24pt; margin: 0; color: #0f172a; font-weight: 900;">DebtPipe</h1>
+                            <p style="color: #10b981; font-weight: bold; margin: 2px 0 0 0; text-transform: uppercase; font-size: 9pt;">by Gitchegumi</p>
                         </div>
-                        <div style="text-align: right; font-size: 10pt; color: #64748b;">
+                        <div style="text-align: right; font-size: 9pt; color: #64748b;">
                             <p style="margin: 0;">Plan Generated: ${new Date().toLocaleDateString()}</p>
-                            <p style="margin: 5px 0 0 0;">Method: ${lastResult.method.toUpperCase()} | Extra: $${lastResult.extra}/mo</p>
+                            <p style="margin: 2px 0 0 0;">Method: ${lastResult.method.toUpperCase()} | Extra: $${lastResult.extra}/mo</p>
                         </div>
                     </div>
 
-                    <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; margin-bottom: 40px;">
-                        <div style="border: 1px solid #e2e8f0; padding: 15px; border-radius: 10px;">
-                            <div style="font-size: 8pt; color: #94a3b8; text-transform: uppercase; font-weight: bold;">Time to Freedom</div>
-                            <div style="font-size: 18pt; font-weight: bold; color: #0f172a;">${lastResult.metrics.months} Months</div>
+                    <!-- Metrics Grid -->
+                    <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; margin-bottom: 25px;">
+                        <div style="border: 1px solid #e2e8f0; padding: 12px; border-radius: 8px; background: #f8fafc;">
+                            <div style="font-size: 7pt; color: #94a3b8; text-transform: uppercase; font-weight: bold;">Time to Freedom</div>
+                            <div style="font-size: 14pt; font-weight: bold; color: #0f172a;">${lastResult.metrics.months} Months</div>
+                            <div style="font-size: 7pt; color: #64748b; margin-top: 2px;">Payoff: ${new Date(lastResult.metrics.date).toLocaleString('default', { month: 'short', year: 'numeric' })}</div>
                         </div>
-                        <div style="border: 1px solid #e2e8f0; padding: 15px; border-radius: 10px;">
-                            <div style="font-size: 8pt; color: #94a3b8; text-transform: uppercase; font-weight: bold;">Total Interest</div>
-                            <div style="font-size: 18pt; font-weight: bold; color: #f43f5e;">$${Math.round(lastResult.metrics.interest).toLocaleString()}</div>
+                        <div style="border: 1px solid #e2e8f0; padding: 12px; border-radius: 8px; background: #f8fafc;">
+                            <div style="font-size: 7pt; color: #94a3b8; text-transform: uppercase; font-weight: bold;">Total Interest</div>
+                            <div style="font-size: 14pt; font-weight: bold; color: #f43f5e;">$${Math.round(lastResult.metrics.interest).toLocaleString()}</div>
+                            <div style="font-size: 7pt; color: #64748b; margin-top: 2px;">Paid to banks</div>
                         </div>
-                        <div style="border: 1px solid #e2e8f0; padding: 15px; border-radius: 10px;">
-                            <div style="font-size: 8pt; color: #94a3b8; text-transform: uppercase; font-weight: bold;">Total Cost</div>
-                            <div style="font-size: 18pt; font-weight: bold; color: #0f172a;">$${Math.round(lastResult.metrics.total).toLocaleString()}</div>
+                        <div style="border: 1px solid #e2e8f0; padding: 12px; border-radius: 8px; background: #f8fafc;">
+                            <div style="font-size: 7pt; color: #94a3b8; text-transform: uppercase; font-weight: bold;">Total Cost</div>
+                            <div style="font-size: 14pt; font-weight: bold; color: #0f172a;">$${Math.round(lastResult.metrics.total).toLocaleString()}</div>
+                            <div style="font-size: 7pt; color: #64748b; margin-top: 2px;">Principal + Interest</div>
                         </div>
-                        <div style="border: 1px solid #e2e8f0; padding: 15px; border-radius: 10px;">
-                            <div style="font-size: 8pt; color: #94a3b8; text-transform: uppercase; font-weight: bold;">Monthly Budget</div>
-                            <div style="font-size: 18pt; font-weight: bold; color: #0f172a;">$${Math.round(lastResult.metrics.budget).toLocaleString()}</div>
+                        <div style="border: 1px solid #e2e8f0; padding: 12px; border-radius: 8px; background: #f8fafc;">
+                            <div style="font-size: 7pt; color: #94a3b8; text-transform: uppercase; font-weight: bold;">Monthly Flow</div>
+                            <div style="font-size: 14pt; font-weight: bold; color: #0f172a;">$${Math.round(lastResult.metrics.budget).toLocaleString()}</div>
+                            <div style="font-size: 7pt; color: #64748b; margin-top: 2px;">Total Budget</div>
                         </div>
                     </div>
 
-                    <h2 style="font-size: 16pt; border-bottom: 1px solid #f1f5f9; padding-bottom: 10px; margin-bottom: 20px;">Payoff Milestones</h2>
-                    <table style="width: 100%; border-collapse: collapse; margin-bottom: 40px;">
+                    <!-- Milestones -->
+                    <h2 style="font-size: 14pt; border-bottom: 1px solid #f1f5f9; padding-bottom: 5px; margin-bottom: 15px; color: #0f172a;">Payoff Milestones</h2>
+                    <table style="width: 100%; border-collapse: collapse; margin-bottom: 25px;">
                         <thead>
-                            <tr style="background: #f8fafc; text-align: left; font-size: 9pt; color: #64748b;">
-                                <th style="padding: 10px; border-bottom: 1px solid #e2e8f0;">Priority</th>
-                                <th style="padding: 10px; border-bottom: 1px solid #e2e8f0;">Debt Name</th>
-                                <th style="padding: 10px; border-bottom: 1px solid #e2e8f0;">Month</th>
-                                <th style="padding: 10px; border-bottom: 1px solid #e2e8f0; text-align: right;">Target Date</th>
+                            <tr style="background: #f1f5f9; text-align: left; font-size: 8pt; color: #475569;">
+                                <th style="padding: 8px; border-bottom: 2px solid #e2e8f0;">Priority</th>
+                                <th style="padding: 8px; border-bottom: 2px solid #e2e8f0;">Debt Name</th>
+                                <th style="padding: 8px; border-bottom: 2px solid #e2e8f0;">Month</th>
+                                <th style="padding: 8px; border-bottom: 2px solid #e2e8f0; text-align: right;">Target Date</th>
                             </tr>
                         </thead>
-                        <tbody style="font-size: 10pt;">
+                        <tbody style="font-size: 9pt;">
                             ${lastResult.milestones.map((m, i) => `
-                                <tr>
-                                    <td style="padding: 10px; border-bottom: 1px solid #f1f5f9;">#${i+1}</td>
-                                    <td style="padding: 10px; border-bottom: 1px solid #f1f5f9; font-weight: bold;">${m.name}</td>
-                                    <td style="padding: 10px; border-bottom: 1px solid #f1f5f9;">Month ${m.month}</td>
-                                    <td style="padding: 10px; border-bottom: 1px solid #f1f5f9; text-align: right; color: #10b981; font-weight: bold;">${m.date}</td>
+                                <tr style="page-break-inside: avoid;">
+                                    <td style="padding: 8px; border-bottom: 1px solid #f1f5f9; color: #94a3b8; font-family: monospace;">#${String(i+1).padStart(2, '0')}</td>
+                                    <td style="padding: 8px; border-bottom: 1px solid #f1f5f9; font-weight: bold; color: #1e293b;">${m.name}</td>
+                                    <td style="padding: 8px; border-bottom: 1px solid #f1f5f9;">Month ${m.month}</td>
+                                    <td style="padding: 8px; border-bottom: 1px solid #f1f5f9; text-align: right; color: #059669; font-weight: bold;">${m.date}</td>
                                 </tr>
                             `).join('')}
                         </tbody>
                     </table>
 
+                    <!-- Timeline -->
                     <div style="page-break-before: always; height: 1px;"></div>
-                    <h2 style="font-size: 16pt; border-bottom: 1px solid #f1f5f9; padding-bottom: 10px; margin-bottom: 20px;">Full Payoff Timeline</h2>
-                    <table style="width: 100%; border-collapse: collapse; font-size: 7pt; table-layout: fixed;">
-                        <thead>
-                            <tr style="background: #f8fafc; color: #64748b;">
-                                <th style="padding: 5px; border: 1px solid #e2e8f0; width: 80px;">Debt Name</th>
-                                ${lastResult.timeline.map(step => `<th style="padding: 5px; border: 1px solid #e2e8f0; text-align: center;">${step.date}</th>`).join('')}
-                            </tr>
-                        </thead>
-                        <tbody>
-                            ${lastResult.debtNames.map(name => `
-                                <tr>
-                                    <td style="padding: 5px; border: 1px solid #e2e8f0; font-weight: bold; background: #f8fafc;">${name}</td>
-                                    ${lastResult.timeline.map(step => {
-                                        const bal = step.balances[name];
-                                        const isPaid = bal <= 0 && (lastResult.timeline[lastResult.timeline.indexOf(step)-1]?.balances[name] > 0 || lastResult.timeline.indexOf(step) === 0);
-                                        return `<td style="padding: 5px; border: 1px solid #e2e8f0; text-align: center; ${isPaid ? 'background: #ecfdf5; color: #059669; font-weight: bold;' : ''}">${bal <= 0 ? 'PAID' : '$' + Math.round(bal)}</td>`;
-                                    }).join('')}
+                    <h2 style="font-size: 14pt; border-bottom: 1px solid #f1f5f9; padding-bottom: 5px; margin-bottom: 15px; color: #0f172a;">Full Payoff Timeline (Balances)</h2>
+                    <div style="overflow-x: auto;">
+                        <table style="width: 100%; border-collapse: collapse; font-size: 6.5pt; table-layout: fixed;">
+                            <thead>
+                                <tr style="background: #f1f5f9; color: #475569;">
+                                    <th style="padding: 4px; border: 1px solid #e2e8f0; width: 100px; text-align: left;">Debt Name</th>
+                                    ${lastResult.timeline.filter((_, index) => index % 3 === 0 || index === lastResult.timeline.length - 1).map(step => `
+                                        <th style="padding: 4px; border: 1px solid #e2e8f0; text-align: center;">${step.date}</th>
+                                    `).join('')}
                                 </tr>
-                            `).join('')}
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                ${lastResult.debtNames.map(name => `
+                                    <tr style="page-break-inside: avoid;">
+                                        <td style="padding: 4px; border: 1px solid #e2e8f0; font-weight: bold; background: #f8fafc; color: #1e293b; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">${name}</td>
+                                        ${lastResult.timeline.filter((_, index) => index % 3 === 0 || index === lastResult.timeline.length - 1).map(step => {
+                                            const bal = step.balances[name];
+                                            const isPaid = bal <= 0 && (lastResult.timeline[lastResult.timeline.indexOf(step)-1]?.balances[name] > 0 || lastResult.timeline.indexOf(step) === 0);
+                                            return `<td style="padding: 4px; border: 1px solid #e2e8f0; text-align: center; ${isPaid ? 'background: #ecfdf5; color: #059669; font-weight: bold;' : 'color: #64748b;'}">${bal <= 0 ? 'PAID' : '$' + Math.round(bal).toLocaleString()}</td>`;
+                                        }).join('')}
+                                    </tr>
+                                `).join('')}
+                            </tbody>
+                        </table>
+                    </div>
+                    <p style="font-size: 7pt; color: #94a3b8; margin-top: 10px; font-style: italic;">* Timeline sampled every 3 months for readability.</p>
                 </div>
             `;
 
             const opt = {
-                margin: [10, 10],
+                margin: 10,
                 filename: 'DebtPipe_Payoff_Report.pdf',
                 image: { type: 'jpeg', quality: 0.98 },
-                html2canvas: { scale: 2, useCORS: true },
-                jsPDF: { unit: 'mm', format: 'a4', orientation: 'landscape' }
+                html2canvas: { scale: 2, useCORS: true, letterRendering: true },
+                jsPDF: { unit: 'mm', format: 'a4', orientation: 'landscape' },
+                pagebreak: { mode: ['avoid-all', 'css', 'legacy'] }
             };
 
             html2pdf().set(opt).from(html).save();
